# sbirka-mcp

./: CLAUDE.md  README.md  fastmcp.json  pyproject.toml  sbirka_client.py  sbirka_server.py
