[project]
name = "sbirka-mcp"
version = "0.1.0"
description = "MCP server for Czech e-Sbírka legislation system"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "httpx",
    "beautifulsoup4",
    "lxml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["sbirka_client.py", "sbirka_server.py"]
